--- a/Connect_Four.ipynb
+++ b/Connect_Four.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 336,
    "id": "068484cf-e540-4010-9017-03ba85a6bb38",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 260,
    "id": "d17b5dd1-3b46-4290-adfe-de7a23601f71",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 262,
    "id": "33e3e2e8-5a58-483e-be81-fff5f714b3bd",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 264,
    "id": "a8e604b0-ca03-42a0-a9de-9afc7b43ba59",
    "metadata": {},
    "outputs": [],
@@ -287,36 +287,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 282,
+   "id": "e7ba493f-8064-4e3f-a31b-78377b03b83c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#column_map = {'A': 0, 'B': 1, 'C': 2, 'D': 3, 'E': 4, 'F': 5, 'G': 6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "id": "60e067cb-48e4-4bfa-a58e-545141ba76b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_list = ['A', 'B', 'C', 'D', 'E', 'F', 'G']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "id": "8b97626b-8576-4977-ad17-e8a82795028d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_list[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "id": "c0d5c93a-d744-41ca-a57d-aea00458654c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_list.index('B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
    "id": "14ca2725-dce1-422e-8cf7-8a0822fd61b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_choice(gird):\n",
-    "    \n",
-    "    position = 0\n",
-    "\n",
-    "    while position not in list(range(A,G)) or not space_check(gird, position):\n",
-    "        position = int(input(\"Choose your column:(A-G)\"))\n",
-    "\n",
-    "    return position"
+    "def player_choice(test_grid): # def fxn. with a general grid to call our grid\n",
+    "    choice = input(\"Choose your column (A-G): \").upper()\n",
+    "    if choice in columns_list:\n",
+    "        return columns_list.index(choice)\n",
+    "    else:\n",
+    "        print(\"Please choose a column from A to G.\")\n",
+    "        return columns_list.index(choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "01f0c11f-938b-46ee-a8e9-a0a6901e8648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Choose your column (A-G):  a\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 314,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_choice(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "id": "e320f678-0ec8-4254-ac94-744adf9a66fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Choose your column (A-G):  a\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[' ', ' ', ' ', ' ', ' ', ' ']"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid[player_choice(grid)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9b7b71-7632-433d-b06d-9ec53ce02d53",
+   "id": "bc23f367-f37e-45f1-9ed9-52998c8b3309",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71ce7242-0690-426b-97d6-a426715ddeb9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#questions\n",
+    "\n",
+    "# can we create a variable that stores player_choice(grid) so we can index that variable (column a, index 0)\n",
+    "    # what if the player output was an integer, can we call it as index of the column \n",
+    "# how to make a place marker... \n",
+    "    # do we approach it by first defining a marker/token... do we need column functions better defined first\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,135 +444,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "3dcf6979-34a5-48b1-9508-6dc02b8fed0c",
+   "execution_count": null,
+   "id": "d3bb0f09-7598-4505-8b7f-47d982164d1d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m column \u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m4\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mF\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m5\u001b[39m}, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mG\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m6\u001b[39m}]\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(column[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "column =[{'A': 0}, {'B': 1}, {'C': 2}, {'D': 3}, {'E': 4}, {'F': 5}, {'G': 6}]\n",
-    "\n",
-    "# Example usage\n",
-    "print(column['A'])  # Output: 0\n",
-    "\n"
+    "grid[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "583eb232-9172-4d7d-98ea-acc83df9cc5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "letter_to_index_map = {\n",
-    "    'A': 0,\n",
-    "    'B': 1,\n",
-    "    'C': 2,\n",
-    "    'D': 3,\n",
-    "    'E': 4,\n",
-    "    'F': 5,\n",
-    "    'G': 6\n",
-    "}\n",
-    "\n",
-    "# Example usage\n",
-    "print(letter_to_index_map['A'])  # Output: 0\n",
-    "print(letter_to_index_map['G'])  # Output: 6\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "c54d5488-cc7d-4aa2-b2eb-8f4f514c68df",
+   "execution_count": 248,
+   "id": "9d9512fb-84ce-4926-b19e-838c71263580",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "'#'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "letter_to_index_map['A']"
+    "grid[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dade74f2-4ea0-4d94-a9fc-2174623b6a7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "b21b57d3-51c9-4741-8c3f-5310e5a02081",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[' ', ' ', ' ', ' ', ' ', ' ']\n"
-     ]
-    }
-   ],
-   "source": [
-    "column_A = grid[0]\n",
-    "column_B\n",
-    "\n",
-    "column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 328,
    "id": "b1c4a47e-dc89-4738-8c05-50c341a6577c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def place_marker(grid, marker, letter): \n",
-    "    grid[letter] = marker "
+    "def place_marker(test_grid, tokens, position): \n",
+    "    grid[position] = tokens "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "f0b9a1a5-0cd2-4e98-9f69-3afa98241757",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " '🔴',\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' ']]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "place_marker(grid, red, 1)\n",
+    "display(grid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf42a6b-b82f-47ee-a1ea-917cbb29214b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d6bb579-7a07-4f87-b035-11786a9bbc30",
+   "id": "343feed0-4688-4e2b-bddc-88ad4dac9018",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -535,11 +593,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bd7982-f764-4a39-b322-29eba3cab277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def full_board_check(grid): # function for a full grid\n",
+    "    for i in range(1, 10): # for elements across columns in the range of columns A-B / 0-5\n",
+    "        if space_check(board, i): # if there's space in the columns of the grid\n",
+    "            return False # looping through the columns to return false (there's no space)\n",
+    "\n",
+    "    return True #true that there's no space"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1ccc873c-dfbf-438c-a378-4216b82f2429",
    "metadata": {},
    "source": [
-    "### Space Check"
+    "### Column Check"
    ]
   },
   {
@@ -549,8 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def space_check(grid, position):  ### True if the space is not occupied\n",
-    "    return grid[position] == \" \""
+    "def column_check(grid, position):  # true if the column is not occupied # use column \n",
+    "    return grid[position] == \" \" "
    ]
   },
   {
