--- a/Connect_Four.ipynb
+++ b/Connect_Four.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 114,
    "id": "068484cf-e540-4010-9017-03ba85a6bb38",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 104,
    "id": "60e067cb-48e4-4bfa-a58e-545141ba76b9",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 86,
    "id": "14ca2725-dce1-422e-8cf7-8a0822fd61b0",
    "metadata": {},
    "outputs": [],
@@ -360,12 +360,13 @@
     "        return columns_list.index(choice)\n",
     "    else:\n",
     "        print(\"Please choose a column from A to G.\")\n",
-    "        return columns_list.index(choice)"
+    "        return columns_list.index(choice)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 88,
    "id": "01f0c11f-938b-46ee-a8e9-a0a6901e8648",
    "metadata": {},
    "outputs": [
@@ -382,18 +383,18 @@
        "0"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "player_choice(grid)"
+    "player_choice(grid)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 90,
    "id": "e320f678-0ec8-4254-ac94-744adf9a66fa",
    "metadata": {},
    "outputs": [
@@ -410,7 +411,7 @@
        "[' ', ' ', ' ', ' ', ' ', ' ']"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,47 +455,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "9d9512fb-84ce-4926-b19e-838c71263580",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'#'"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "id": "b1c4a47e-dc89-4738-8c05-50c341a6577c",
+   "execution_count": 144,
+   "id": "24651fbd-29bc-4f75-9f2e-550ee1e2d64c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def place_marker(test_grid, tokens, position): \n",
-    "    grid[position] = tokens "
+    "def place_marker(test_grid, tokens, column_list):\n",
+    "    # Start at the bottom of the column and move upward\n",
+    "    for row in reversed(range(len(test_grid[0]))):  # len(test_grid[0]) is the number of rows\n",
+    "        if test_grid[column_list][row] == \" \":  # Check if the spot is empty\n",
+    "            test_grid[column_list][row] = tokens  # Place the token in the first available row\n",
+    "            return True  # Successfully placed the token\n",
+    "    return  print(\"Please choose another column.\")\n",
+    "    # Return False if the column is full\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
-   "id": "f0b9a1a5-0cd2-4e98-9f69-3afa98241757",
+   "execution_count": 126,
+   "id": "4e264709-cb03-452c-bf9f-ab3e3918ee95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[' ', ' ', ' ', ' ', ' ', ' '],\n",
-       " '🔴',\n",
+       " [' ', ' ', '🔴', '🔴', '🔴', '🔴'],\n",
        " [' ', ' ', ' ', ' ', ' ', ' '],\n",
        " [' ', ' ', ' ', ' ', ' ', ' '],\n",
        " [' ', ' ', ' ', ' ', ' ', ' '],\n",
@@ -513,11 +499,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "343feed0-4688-4e2b-bddc-88ad4dac9018",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please choose another column.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " ['🟡', '🟡', '🔴', '🔴', '🔴', '🔴'],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' ']]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "place_marker(grid, yellow, 1)\n",
+    "display(grid)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -525,47 +537,6 @@
    "metadata": {},
    "source": [
     "### Column Function "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "fd9cc5a3-934d-460f-a902-e2c7f2603eca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def column():\n",
-    "    for i in column:\n",
-    "        i in range(0,5)\n",
-    "            \n",
-    "        while column[i] != \" \":\n",
-    "            place_marker(grid) == column[i-1]\n",
-    "        while column[i] == \" \":\n",
-    "                place_marker(grid) == column[i]\n",
-    "            \n",
-    "        # if i =5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "87ab11f4-5a20-4e00-a552-8b27f9a600ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "column() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m column (\u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: column() takes 0 positional arguments but 1 was given"
-     ]
-    }
-   ],
-   "source": [
-    "column()"
    ]
   },
   {
@@ -585,6 +556,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "22114b2d-9f56-430b-b490-716b7dfd444b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def win_check(grid, mark):\n",
+    "    \n",
+    "##will return True or False\n",
+    "    for i in range(0,6):\n",
+    "        for j in range(0,5):\n",
+    "            if ((grid[i][j] == mark and grid[i][j+1] == mark and grid[i][j+2] == mark and grid[i][j+3] == mark) or\n",
+    "                (grid[i][j] == mark and grid[i+1][j] == mark and grid[i+2][j] == mark and grid[i+3][j] == mark) or\n",
+    "                (grid[i][j] == mark and grid[i+1][j+1] == mark and grid[i+2][j+2] == mark and grid[i+3][j+3] == mark) or\n",
+    "                (grid[i][j] == mark and grid[i+1][j-1] == mark and grid[i+2][j-2] == mark and grid[i+3][j-3] == mark) \n",
+    "                ):\n",
+    "                return True\n",
+    "             \n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "fe8d46d0-2b77-46dc-be29-db8c71d46498",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "win_check(grid, yellow)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "23310ba4-5c9e-4ac7-a7f0-be982602f010",
    "metadata": {},
@@ -594,12 +608,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
+   "id": "78d74d9b-ce7c-4bdc-93bb-292dffbb7a75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def space_check(board, col_num, row_num):  ### True if the space is not occupied\n",
+    "    return board[col_num][row_num] == \" \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "id": "b8bd7982-f764-4a39-b322-29eba3cab277",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def full_board_check(grid): # function for a full grid\n",
+    "def full_board_check(test_grid): # function for a full grid\n",
     "    for i in range(1, 10): # for elements across columns in the range of columns A-B / 0-5\n",
     "        if space_check(board, i): # if there's space in the columns of the grid\n",
     "            return False # looping through the columns to return false (there's no space)\n",
@@ -622,14 +647,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_check(grid, position):  # true if the column is not occupied # use column \n",
-    "    return grid[position] == \" \" "
+    "## We may not need it \n",
+    "# def column_check(grid, column_items):  # true if the column is not occupied # use column \n",
+    "#    return grid[column_items][] == \" \" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "78d74d9b-ce7c-4bdc-93bb-292dffbb7a75",
+   "execution_count": 169,
+   "id": "70decec8-72a6-48d9-80cc-1dde6a2cce2c",
    "metadata": {},
    "outputs": [
     {
@@ -638,13 +664,13 @@
        "False"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "space_check(grid, 3)"
+    "space_check(grid, 1, 1)"
    ]
   },
   {
